--- a/app/src/main/res/layout/item_rv_product.xml
+++ b/app/src/main/res/layout/item_rv_product.xml
@@ -40,10 +40,12 @@
                 android:id="@+id/tv_name_product"
                 android:layout_width="101dp"
                 android:layout_height="41dp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/raleway_variable_font_wght"
-                android:text="Sweet Cappuccino"
+                android:text="Sweet Cappuccino Sweet Cappuccino Sweet Cappuccino"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -68,6 +70,8 @@
                 android:fontFamily="@font/raleway_variable_font_wght"
                 android:textColor="@color/text_color"
                 android:textSize="11sp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name_product" />
@@ -77,6 +81,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="@string/item_price"
                 android:textColor="@color/grey_primary_variant"
