--- a/app/src/main/res/layout/toobar_home.xml
+++ b/app/src/main/res/layout/toobar_home.xml
@@ -80,8 +80,10 @@
         android:layout_height="wrap_content"
         android:queryHint="Search for your coffee..."
         android:iconifiedByDefault="false"
+        android:queryBackground="@null"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="16dp"
+        app:theme="@style/SearchViewStyle"
         android:background="@drawable/searchview_background"
         android:backgroundTint="@color/grey_opacity60_primary"/>
 
