--- a/app/src/main/res/layout/test_text.xml
+++ b/app/src/main/res/layout/test_text.xml
@@ -38,6 +38,6 @@
         app:layout_constraintTop_toTopOf="parent"
         android:ellipsize="end"
         android:maxLines="1"
-        tools:text="Text Vieweeeeeeeeeeeeeeeeeee"/>
+        tools:text="Text View"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
