--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -9,6 +9,7 @@
     android:layout_height="wrap_content">
 
     <CheckBox
+        android:id="@+id/cb_item_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="0dp"
@@ -22,6 +23,7 @@
         app:cardCornerRadius="9dp"
         android:layout_marginEnd="12dp">
         <ImageView
+            android:id="@+id/iv_thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/image_logo"
@@ -35,18 +37,21 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/RegularText"
             android:text="Black tea"
             tools:ignore="HardcodedText" />
         <TextView
+            android:id="@+id/tv_product_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SmallText"
             android:text="With milk"
             tools:ignore="HardcodedText" />
         <TextView
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SmallNumber"
@@ -88,6 +93,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/SmallText"
